Fix wrapping for badges

--- a/src/components/atlas.sass
+++ b/src/components/atlas.sass
@@ -259,15 +259,16 @@ $menu-label-color: $white-ter
   aspect-ratio: 16/9
 
 .badge
-  padding: 4px 8px
+  padding: 3px 6px
   text-align: center
   border-radius: 5px
   white-space: nowrap
+  display: inline-block
 
 .badge-tag
   @extend .badge
   font-size: 14px
-  background-color: #555
+  background-color: #777
   color: white
   margin: 2px
   &:hover
